--- a/src/style/variable.scss
+++ b/src/style/variable.scss
@@ -1,4 +1,5 @@
 $dark-color: white;
-$dark-background: #333333ff;
 $light-color: black;
-$light-background: #f6f6f6ff;
+
+$dark-background: rgb(24, 24, 28);
+$light-background: white;
